removed margins auto margins from centred text page headlines to prevent overlaping fonts

--- a/app/assets/stylesheets/pageflow/text_page.scss
+++ b/app/assets/stylesheets/pageflow/text_page.scss
@@ -90,7 +90,12 @@ $inverted-background-color: black;
             padding: 2em 0;
             margin: 0;
             span {
-              margin: 0 auto;
+              margin-right: auto;
+              margin-left: auto;
+            }
+
+            .subtitle {
+              margin-bottom: 0em;
             }
 
             padding-right: $nav-bar-margin;
